--- a/dashboard.html
+++ b/dashboard.html
@@ -1,69 +1,103 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>K-pop 아이돌 대시보드</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="/backend/data/kpop_eda.ipynb"></script> <!-- ⚠️ 실제로는 JS파일 필요 -->
+  <script src="./debut_data.js"></script>
   <style>
     body {
-      background: #101820;
+      background: #0e1116;
+      color: #ffffff;
       font-family: 'Noto Sans KR', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      min-height: 100vh;
       margin: 0;
       padding: 50px 0;
-      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
+
     .dashboard {
       width: 1200px;
-      background: #1b1f2f;
-      border-radius: 16px;
-      box-shadow: 0 6px 30px rgba(0,0,0,0.4);
+      background: #1a1d27;
+      border-radius: 18px;
+      box-shadow: 0 6px 25px rgba(0, 0, 0, 0.5);
       padding: 40px;
-      display: flex;
-      flex-direction: row;
-      gap: 50px;
+      margin-bottom: 40px;
     }
+
+    .row {
+      display: flex;
+      justify-content: space-between;
+      gap: 40px;
+    }
+
     .chart-box {
       flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
-    h2 {
-      margin-bottom: 20px;
-      font-weight: 500;
-      font-size: 20px;
-      text-align: center;
-      color: #b0b8ff;
-    }
+
     canvas {
       width: 100%;
-      height: 420px;
+      height: 400px;
     }
+
+    #trendChart {
+      height: 500px; /* 왼쪽 그래프 높이 확대 */
+    }
+
+    .empty-box {
+      flex: 1;
+      height: 400px;
+      background: #2a2e3d;
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #7a7f99;
+      font-size: 18px;
+    }
+    .chart-box {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  justify-content: flex-start; /* 추가 */
+}
   </style>
 </head>
 <body>
+  <!-- 상단: 주요 그래프 -->
   <div class="dashboard">
-    <!-- 왼쪽: 연도별 아이돌 수 + 3년 이동평균 -->
-    <div class="chart-box">
-      <canvas id="trendChart"></canvas>
-    </div>
+    <div class="row">
+      <!-- 왼쪽: 데뷔 수 + 이동평균 -->
+      <div class="chart-box">
+        <canvas id="trendChart"></canvas>
+        <canvas id="foreignRatioChart" style="margin-top:40px;"></canvas>
+      </div>
 
-    <!-- 오른쪽: 외국인 국적 비율 TOP10 -->
-    <div class="chart-box">
-      <canvas id="nationalityChart"></canvas>
+      <!-- 오른쪽: 국적 비율 -->
+      <div class="chart-box">
+        <canvas id="nationalityChart"></canvas>
+      </div>
+    </div>
+  </div>
+
+  <!-- 하단: 확장용 대시보드 (공백) -->
+  <div class="dashboard">
+    <div class="row">
+      <div class="empty-box">📦 준비 중 (왼쪽 영역)</div>
+      <div class="empty-box">📦 준비 중 (오른쪽 영역)</div>
     </div>
   </div>
 
   <script>
-    // ======= 임시 데이터 (실제는 debutData 로 교체) =======
-    const data = typeof debutData !== 'undefined' ? debutData : [];
+    // ======= 데이터 로드 =======
+    const data = debutData;
 
-    // ======= 필드명 정규화 =======
+    // ======= 필드명 보정 =======
     data.forEach(d => {
       d.year = d.year || d.debut_year || d.active_year;
       d.nationality = d.nationality || d.country || d.birth_country;
@@ -76,29 +110,55 @@
       if (isNaN(year) || year < 2005) return;
       yearCount[year] = (yearCount[year] || 0) + 1;
     });
-    const years = Object.keys(yearCount).map(Number).sort((a,b)=>a-b);
+
+    const years = Object.keys(yearCount).map(Number).sort((a, b) => a - b);
     const counts = years.map(y => yearCount[y]);
     const movingAvg = counts.map((_, i, arr) => {
-      const slice = arr.slice(Math.max(0, i-2), i+1);
-      const valid = slice.filter(v => !isNaN(v));
-      const avg = valid.length ? valid.reduce((a,b)=>a+b,0)/valid.length : 0;
+      const slice = arr.slice(Math.max(0, i - 2), i + 1);
+      const avg = slice.reduce((a, b) => a + b, 0) / slice.length;
       return avg.toFixed(2);
     });
 
-    // ======= 외국인 아이돌 국적 비율 TOP 10 =======
+    // ======= 외국인 아이돌 비율 =======
+    const foreignRatio = {};
+    years.forEach(y => {
+      const all = data.filter(d => parseInt(d.year) === y);
+      const foreign = all.filter(d => {
+        const nat = d.nationality?.toLowerCase() || '';
+        return !['korea', 'south korea', '대한민국', '한국', 'korean'].some(k => nat.includes(k));
+      });
+      foreignRatio[y] = all.length ? (foreign.length / all.length * 100).toFixed(2) : 0;
+    });
+
+    const ratioValues = years.map(y => foreignRatio[y]);
+
+    // ======= 외국인 아이돌 국적 비율 TOP10 =======
     const nationalityCount = {};
     data.forEach(d => {
       if (!d.nationality) return;
       const nat = d.nationality.toString().trim().toLowerCase();
-      const koreanWords = ['korea', 'south korea', 'republic of korea', '대한민국', '한국', 'korean'];
-      if (koreanWords.some(k => nat.includes(k))) return; // 한국 제외
+      if (['korea', 'south korea', 'republic of korea', '대한민국', '한국', 'korean'].some(k => nat.includes(k))) return;
       nationalityCount[nat] = (nationalityCount[nat] || 0) + 1;
     });
-    const top10 = Object.entries(nationalityCount).sort((a,b)=>b[1]-a[1]).slice(0,10);
-    const nationalLabels = top10.map(([k]) => k.toUpperCase());
-    const nationalValues = top10.map(([,v]) => v);
 
-    // ======= 그래프 =======
+    const top10 = Object.entries(nationalityCount)
+      .sort((a, b) => b[1] - a[1])
+      .slice(0, 10);
+
+    // ======= 국가명 한국어 변환 =======
+    const countryNames = {
+      'china': '중국', 'japan': '일본', 'thailand': '태국', 'usa': '미국',
+      'taiwan': '대만', 'australia': '호주', 'canada': '캐나다', 'vietnam': '베트남',
+      'indonesia': '인도네시아', 'philippines': '필리핀', 'malaysia': '말레이시아',
+      'mongolia': '몽골', 'hong kong': '홍콩', 'singapore': '싱가포르', 'uk': '영국',
+      'france': '프랑스', 'germany': '독일'
+    };
+
+    const nationalLabels = top10.map(([k]) => countryNames[k] || k);
+    const nationalValues = top10.map(([, v]) => v);
+
+    // ======= Chart.js =======
+
     // (1) 연도별 데뷔 아이돌 수 + 이동평균
     new Chart(document.getElementById('trendChart'), {
       type: 'bar',
@@ -108,7 +168,7 @@
           {
             label: '데뷔 아이돌 수',
             data: counts,
-            backgroundColor: 'rgba(61,132,255,0.8)',
+            backgroundColor: 'rgba(54, 162, 235, 0.8)',
             borderWidth: 0
           },
           {
@@ -128,7 +188,7 @@
           legend: { labels: { color: '#fff' } },
           title: {
             display: true,
-            text: '연도별 데뷔 아이돌 수 & 3년 이동평균',
+            text: '연도별 데뷔 아이돌 수 & 3년 이동평균 (2005~)',
             color: '#b0b8ff',
             font: { size: 18 }
           }
@@ -140,32 +200,112 @@
       }
     });
 
-    // (2) 외국인 국적 비율 TOP10 (원형)
-    new Chart(document.getElementById('nationalityChart'), {
-      type: 'doughnut',
-      data: {
-        labels: nationalLabels,
-        datasets: [{
-          data: nationalValues,
-          backgroundColor: [
-            '#ff6384','#36a2eb','#ffce56','#4bc0c0','#9966ff',
-            '#ff9f40','#c9cbcf','#f77825','#00a896','#f94144'
-          ]
-        }]
+     new Chart(document.getElementById('foreignRatioChart'), {
+    type: 'line',
+    data: {
+      labels: years.filter(y => y >= 2009),
+      datasets: [{
+        label: '외국인 비율 (%)',
+        data: ratioValues.filter((_, i) => years[i] >= 2009),
+        borderColor: '#ffcd56',
+        backgroundColor: 'rgba(255, 205, 86, 0.2)',
+        borderWidth: 3,
+        pointRadius: 4,
+        fill: true,
+        tension: 0.3
+      }]
+    },
+    options: {
+      plugins: {
+        legend: { position: 'top', labels: { color: '#fff' } },
+        title: {
+          display: true,
+          text: '연도별 외국인 아이돌 비율 변화 (2009년 이후)',
+          color: '#b0b8ff',
+          font: { size: 18 }
+        }
       },
-      options: {
-        plugins: {
-          legend: { position: 'bottom', labels: { color: '#fff' } },
-          title: {
-            display: true,
-            text: '외국인 아이돌 국적 TOP 10 (한국 제외)',
-            color: '#b0b8ff',
-            font: { size: 18 }
-          }
+      scales: {
+        x: {
+          ticks: { color: '#ccc' },
+          title: { display: true, text: '연도', color: '#aaa' }
+        },
+        y: {
+          ticks: { color: '#ccc', stepSize: 2 },
+          title: { display: true, text: '외국인 비율 (%)', color: '#aaa' },
+          beginAtZero: true,
+          max: 24   // ✅ 최대값 20%로 설정
         }
       }
-    });
+    }
+  });
+
+ // (3) 외국인 아이돌 국적 비율 TOP10 (상위 5개 내부 표시, 비율 크고 간격 추가)
+new Chart(document.getElementById('nationalityChart'), {
+  type: 'doughnut',
+  data: {
+    labels: nationalLabels,
+    datasets: [{
+      data: nationalValues,
+      backgroundColor: [
+        '#ff6384','#36a2eb','#ffce56','#4bc0c0','#9966ff',
+        '#ff9f40','#c9cbcf','#f77825','#00a896','#f94144'
+      ],
+      borderWidth: 2,
+      hoverOffset: 0
+    }]
+  },
+  options: {
+    cutout: '35%',
+    plugins: {
+      legend: { display: false },
+      tooltip: { enabled: false },
+      title: {
+        display: true,
+        text: '외국인 아이돌 국적 비율 TOP 10 (한국 제외)',
+        color: '#b0b8ff',
+        font: { size: 18 }
+      }
+    },
+    animation: { duration: 0 }
+  },
+  plugins: [{
+    id: 'labelInside',
+    afterDatasetsDraw(chart) {
+      const { ctx } = chart;
+      const meta = chart.getDatasetMeta(0);
+      const dataset = chart.data.datasets[0];
+      const total = dataset.data.reduce((a, b) => a + b, 0);
+      const top5 = meta.data.slice(0, 5); // 상위 5개만 표시
+
+      
+
+      ctx.save();
+      ctx.textAlign = 'center';
+      ctx.textBaseline = 'middle';
+
+      top5.forEach((arc, i) => {
+        const { x, y } = arc.tooltipPosition();
+        const label = chart.data.labels[i];
+        const value = dataset.data[i];
+        const percent = ((value / total) * 100).toFixed(1) + '%';
+
+        // 국가 이름 (위쪽)
+        ctx.font = ' 14px "Noto Sans KR"';
+        ctx.fillStyle = '#fff';
+        ctx.fillText(label, x, y - 16); // 🔹 약간 위로 이동
+
+        // 비율 (아래쪽, 더 크고 간격 넓힘)
+        ctx.font = ' 18px "Noto Sans KR"';
+        ctx.fillStyle = '#fff';
+        ctx.fillText(percent, x, y + 10); // 🔹 더 아래로 내려서 간격 확대
+      });
+
+      ctx.restore();
+    }
+  }]
+});
+
   </script>
 </body>
 </html>
-
