--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -32,20 +32,7 @@ body {
   background-attachment: fixed;
 }
 
-/* 💫 타이틀 */
-.project-title {
-  width: 1300px;
-  text-align: center;
-  background: linear-gradient(90deg, var(--gem-pink), var(--soft-rose));
-  color: #F3F1FB;
-  font-size: 15px;
-  font-weight: 700;
-  padding: 20px 0;
-  border-radius: 30px;
-  border: 1px solid rgba(202, 56, 242, 0.2);
-  letter-spacing: 1px;
-  margin-bottom: 35px;
-}
+
 
 /* 💎 대시보드 */
 .dashboard {
@@ -109,49 +96,103 @@ canvas {
   box-shadow: 0 0 20px rgba(202, 56, 242, 0.15);
 }
 
-/* 💜 버튼 */
-button {
-  background: linear-gradient(90deg, var(--gem-pink), var(--amethyst));
-  color: #fff;
-  border: none;
-  border-radius: 10px;
-  padding: 8px 20px;
-  font-size: 15px;
-  cursor: default;
-  box-shadow:
-    0 0 12px rgba(202, 56, 242, 0.4),
-    inset 0 0 8px rgba(255, 255, 255, 0.3);
+/* 기본 세팅 */
+body {
+  margin: 0;
+  overflow-x: hidden;
+  background: #f2f2f2;
+  font-family: "Pretendard", sans-serif;
 }
 
-/* hover 없음 */
-button:hover {
-  background: linear-gradient(90deg, var(--gem-pink), var(--amethyst));
-}
-
-/* 🌃 하단 도시 이미지 (선택) */
-body::after {
-  content: "";
+/* === 토글 버튼 === */
+.menu-toggle {
   position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 200px;
-  background: url("../static/images/city.png") no-repeat center bottom;
-  background-size: cover;
-  opacity: 0.8;
-  filter: hue-rotate(270deg) brightness(1.05);
-  z-index: 0;
+  top: 20px;
+  left: 20px;
+  z-index: 1001;
+  background: linear-gradient(135deg, #F29BDB, #CA38F2);
+  color: white;
+  border: none;
+  padding: 10px 14px;
+  border-radius: 8px;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  transition: left 0.4s ease;
 }
 
+/* === 사이드 메뉴 === */
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -220px;
+  width: 220px;
+  height: 100vh;
+  background: linear-gradient(180deg, #F29BDB, #CA38F2);
+  color: white;
+  padding-top: 60px;
+  transition: left 0.4s ease;
+  box-shadow: 4px 0 10px rgba(0, 0, 0, 0.15);
+  z-index: 1000;
+}
 
+/* 메뉴 항목 */
+.sidebar .menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.sidebar .menu li a {
+  display: block;
+  padding: 14px 20px;
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  transition: background 0.3s ease;
+}
+
+.sidebar .menu li a:hover {
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(6px);
+}
+
+/* === 메인 콘텐츠 === */
+.main-content {
+  transition: margin-left 0.4s ease;
+  padding: 40px;
+}
+
+/* === 활성화 시 (열림 상태) === */
+.sidebar.active {
+  left: 0;
+}
+
+.menu-toggle.active {
+  left: 240px; /* 메뉴 폭 + 여백 */
+}
+
+.main-content.shifted {
+  margin-left: 220px; /* 메뉴가 열린 만큼 밀림 */
+}
 
   </style>
 </head>
 <body>
   
-  <div class="project-title">
-    <h1>아이돌 국적 데이터로 본 K-POP 글로벌라이제이션</h1>
-  </div>
+ 
+ <!-- 토글 버튼 -->
+<button id="menuToggle" class="menu-toggle">☰</button>
+
+<!-- 사이드 메뉴 -->
+<nav id="sidebar" class="sidebar">
+  <ul class="menu">
+    <li><a href="/"> 홈</a></li>
+    <li><a href="/prev">⏮ 이전 페이지</a></li>
+    <li><a href="/next">⏭ 다음 페이지</a></li>
+  </ul>
+</nav>
 
   <!-- 상단: 주요 그래프 -->
   <div class="dashboard">
@@ -169,13 +210,6 @@ body::after {
     </div>
   </div>
 
-  <!-- 하단: 확장용 대시보드 (공백) -->
-  <div class="dashboard">
-    <div class="row">
-      <div class="empty-box">📦 준비 중 (왼쪽 영역)</div>
-      <div class="empty-box">📦 준비 중 (오른쪽 영역)</div>
-    </div>
-  </div>
 
   <script>
     // ======= 데이터 로드 =======
@@ -423,5 +457,7 @@ new Chart(document.getElementById('nationalityChart'), {
 });
 
   </script>
+<script src="mb.js"></script>
+
 </body>
 </html>
