--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -3,187 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>K-pop 아이돌 대시보드</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="./debut_data.js"></script>
-  <style>
- 
-/* 💎 Pop Star Jewel Theme */
-:root {
-  --gem-pink: #F29BDB;      /* 루비 핑크 */
-  --soft-rose: #F2C9E7;     /* 로즈 쿼츠 */
-  --amethyst: #CA38F2;      /* 자수정 보라 (포인트) */
-  --opal: #F2F2F2;          /* 오팔 화이트 (배경) */
-  --onyx: #0D0D0D;          /* 오닉스 블랙 (텍스트) */
-}
-
-/* ✨ 전체 */
-body {
-  background-color: var(--opal);
-  color: var(--onyx);
-  font-family: 'Noto Sans KR', sans-serif;
-  font-size: 15px;
-  margin: 0;
-  padding: 50px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: radial-gradient(circle at 30% 20%, rgba(242, 155, 219, 0.3), transparent 70%),
-                    radial-gradient(circle at 80% 60%, rgba(202, 56, 242, 0.25), transparent 80%);
-  background-attachment: fixed;
-}
-
-
-
-/* 💎 대시보드 */
-.dashboard {
-  width: 1200px;
-  background: white;
-  border-radius: 20px;
-  border: 1px solid rgba(202, 56, 242, 0.25);
-  
-  padding: 40px;
-  margin-bottom: 40px;
-  backdrop-filter: blur(6px);
-  transition: all 0.3s ease;
-}
-
-/* hover 효과 제거 (고정형 빛감 유지) */
-.dashboard:hover {
-  transform: none;
-  box-shadow:
-    0 4px 25px rgba(242, 155, 219, 0.25),
-    inset 0 0 15px rgba(255, 255, 255, 0.5);
-}
-
-/* 💠 차트 박스 */
-.row {
-  display: flex;
-  justify-content: space-between;
-  gap: 40px;
-}
-
-.chart-box {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-/* 📊 캔버스 */
-canvas {
-  width: 100%;
-  height: 400px;
-  background: #ffffff;
-  border-radius: 14px;
-  border: 1px solid rgba(202, 56, 242, 0.25);
-  box-shadow:
-    inset 0 0 20px rgba(242, 155, 219, 0.25),
-    0 0 15px rgba(255, 255, 255, 0.5);
-}
-
-/* 💎 빈 박스 */
-.empty-box {
-  flex: 1;
-  height: 400px;
-  background: linear-gradient(135deg, #fff, var(--soft-rose));
-  border-radius: 14px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--amethyst);
-  font-size: 15px;
-  border: 1px dashed rgba(202, 56, 242, 0.4);
-  box-shadow: 0 0 20px rgba(202, 56, 242, 0.15);
-}
-
-/* 기본 세팅 */
-body {
-  margin: 0;
-  overflow-x: hidden;
-  background: #f2f2f2;
-  font-family: "Pretendard", sans-serif;
-}
-
-/* === 토글 버튼 === */
-.menu-toggle {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  z-index: 1001;
-  background: linear-gradient(135deg, #F29BDB, #CA38F2);
-  color: white;
-  border: none;
-  padding: 10px 14px;
-  border-radius: 8px;
-  font-size: 18px;
-  cursor: pointer;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-  transition: left 0.4s ease;
-}
-
-/* === 사이드 메뉴 === */
-.sidebar {
-  position: fixed;
-  top: 0;
-  left: -220px;
-  width: 220px;
-  height: 100vh;
-  background: linear-gradient(180deg, #F29BDB, #CA38F2);
-  color: white;
-  padding-top: 60px;
-  transition: left 0.4s ease;
-  box-shadow: 4px 0 10px rgba(0, 0, 0, 0.15);
-  z-index: 1000;
-}
-
-/* 메뉴 항목 */
-.sidebar .menu {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.sidebar .menu li a {
-  display: block;
-  padding: 14px 20px;
-  color: white;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  transition: background 0.3s ease;
-}
-
-.sidebar .menu li a:hover {
-  background: rgba(255, 255, 255, 0.25);
-  backdrop-filter: blur(6px);
-}
-
-/* === 메인 콘텐츠 === */
-.main-content {
-  transition: margin-left 0.4s ease;
-  padding: 40px;
-}
-
-/* === 활성화 시 (열림 상태) === */
-.sidebar.active {
-  left: 0;
-}
-
-.menu-toggle.active {
-  left: 240px; /* 메뉴 폭 + 여백 */
-}
-
-.main-content.shifted {
-  margin-left: 220px; /* 메뉴가 열린 만큼 밀림 */
-}
-
-  </style>
+  <!-- <script src="{{ url_for('static', filename='debut_data.js') }}"></script> -->
+  <link rel="stylesheet" href="../static/style.css"> <!-- local test -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
+  <!-- <script src="{{ url_for('static', filename='debut_data.js') }}"></script> -->
+   <script src="../static/debut_data.js"></script>
 </head>
 <body>
   
  
  <!-- 토글 버튼 -->
-<button id="menuToggle" class="menu-toggle">☰</button>
+<!-- <button id="menuToggle" class="menu-toggle">☰</button> -->
 
 <!-- 사이드 메뉴 -->
 <nav id="sidebar" class="sidebar">
@@ -211,253 +41,9 @@ body {
   </div>
 
 
-  <script>
-    // ======= 데이터 로드 =======
-    const data = debutData;
 
-    // ======= 필드명 보정 =======
-    data.forEach(d => {
-      d.year = d.year || d.debut_year || d.active_year;
-      d.nationality = d.nationality || d.country || d.birth_country;
-    });
+<script src="../static/menuboard.js"></script>
 
-    // ======= 연도별 데뷔 아이돌 수 + 이동평균 =======
-    const yearCount = {};
-    data.forEach(d => {
-      const year = parseInt(d.year);
-      if (isNaN(year) || year < 2005) return;
-      yearCount[year] = (yearCount[year] || 0) + 1;
-    });
-
-    const years = Object.keys(yearCount).map(Number).sort((a, b) => a - b);
-    const counts = years.map(y => yearCount[y]);
-    const movingAvg = counts.map((_, i, arr) => {
-      const slice = arr.slice(Math.max(0, i - 2), i + 1);
-      const avg = slice.reduce((a, b) => a + b, 0) / slice.length;
-      return avg.toFixed(2);
-    });
-
-    // ======= 외국인 아이돌 비율 =======
-    const foreignRatio = {};
-    years.forEach(y => {
-      const all = data.filter(d => parseInt(d.year) === y);
-      const foreign = all.filter(d => {
-        const nat = d.nationality?.toLowerCase() || '';
-        return !['korea', 'south korea', '대한민국', '한국', 'korean'].some(k => nat.includes(k));
-      });
-      foreignRatio[y] = all.length ? (foreign.length / all.length * 100).toFixed(2) : 0;
-    });
-
-    const ratioValues = years.map(y => foreignRatio[y]);
-
-    // ======= 외국인 아이돌 국적 비율 TOP10 =======
-    const nationalityCount = {};
-    data.forEach(d => {
-      if (!d.nationality) return;
-      const nat = d.nationality.toString().trim().toLowerCase();
-      if (['korea', 'south korea', 'republic of korea', '대한민국', '한국', 'korean'].some(k => nat.includes(k))) return;
-      nationalityCount[nat] = (nationalityCount[nat] || 0) + 1;
-    });
-
-    const top10 = Object.entries(nationalityCount)
-      .sort((a, b) => b[1] - a[1])
-      .slice(0, 10);
-
-    // ======= 국가명 한국어 변환 =======
-    const countryNames = {
-      'china': '중국', 'japan': '일본', 'thailand': '태국', 'usa': '미국',
-      'taiwan': '대만', 'australia': '호주', 'canada': '캐나다', 'vietnam': '베트남',
-      'indonesia': '인도네시아', 'philippines': '필리핀', 'malaysia': '말레이시아',
-      'mongolia': '몽골', 'hong kong': '홍콩', 'singapore': '싱가포르', 'uk': '영국',
-      'france': '프랑스', 'germany': '독일'
-    };
-
-    const nationalLabels = top10.map(([k]) => countryNames[k] || k);
-    const nationalValues = top10.map(([, v]) => v);
-
-    // ======= Chart.js =======
-
-    // (1) 연도별 데뷔 아이돌 수 + 이동평균
-    new Chart(document.getElementById('trendChart'), {
-      type: 'bar',
-      data: {
-        labels: years,
-        datasets: [
-          {
-            label: '데뷔 아이돌 수',
-            data: counts,
-            backgroundColor: 'rgba(54, 162, 235, 0.8)',
-            borderWidth: 0,
-            order: 2 // ✅ 막대를 뒤로 보냄 (낮을수록 먼저 그림)
-          },
-          {
-            label: '3년 이동평균',
-            data: movingAvg,
-            type: 'line',
-            borderColor: '#ff6b81',
-            borderWidth: 3,
-            pointRadius: 4,
-            fill: false,
-            tension: 0.3,
-            order: 1 // ✅ 라인을 위로 올림 (높을수록 나중에 그림)
-          }
-        ]
-      },
-      options: {
-        plugins: {
-          legend: { labels: { color: '#212529' } },
-          title: {
-            display: true,
-            text: '연도별 데뷔 아이돌 수 & 3년 이동평균 (2005~)',
-            color: '#6a78ee',
-            font: { size: 18 }
-          }
-        },
-        scales: {
-          x: { ticks: { color: '#ccc' }, title: { display: true, text: '연도', color: '#aaa' } },
-          y: { ticks: { color: '#ccc' }, title: { display: true, text: '아이돌 수', color: '#aaa' }, beginAtZero: true }
-        }
-      }
-    });
-
-     new Chart(document.getElementById('foreignRatioChart'), {
-    type: 'line',
-    data: {
-      labels: years.filter(y => y >= 2009),
-      datasets: [{
-        label: '외국인 비율 (%)',
-        data: ratioValues.filter((_, i) => years[i] >= 2009),
-        borderColor: '#ffcd56',
-        backgroundColor: 'rgba(255, 205, 86, 0.2)',
-        borderWidth: 3,
-        pointRadius: 4,
-        fill: true,
-        tension: 0.3
-      }]
-    },
-    options: {
-      plugins: {
-        legend: { position: 'top', labels: { color: '#212529' } },
-        title: {
-          display: true,
-          text: '연도별 외국인 아이돌 비율 변화 (2009년 이후)',
-          color: '#6a78ee',
-          font: { size: 18 }
-        }
-      },
-      scales: {
-        x: {
-          ticks: { color: '#ccc' },
-          title: { display: true, text: '연도', color: '#aaa' }
-        },
-        y: {
-          ticks: { color: '#ccc', stepSize: 2 },
-          title: { display: true, text: '외국인 비율 (%)', color: '#aaa' },
-          beginAtZero: true,
-          max: 24   // ✅ 최대값 20%로 설정
-        }
-      }
-    }
-  });
-
- // (3) 외국인 아이돌 국적 비율 TOP10 (상위 5개 내부 + 아래에 전체 범례)
-new Chart(document.getElementById('nationalityChart'), {
-  type: 'doughnut',
-  data: {
-    labels: nationalLabels,
-    datasets: [{
-      data: nationalValues,
-      backgroundColor: [
-        '#ff6384','#36a2eb','#ffce56','#4bc0c0','#9966ff',
-        '#ff9f40','#c9cbcf','#f77825','#00a896','#f94144'
-      ],
-      borderWidth: 2,
-      hoverOffset: 0
-    }]
-  },
-  options: {
-    cutout: '35%',
-    plugins: {
-      tooltip: { enabled: false },
-      title: {
-        display: true,
-        text: '외국인 아이돌 국적 비율 TOP 10 (한국 제외)',
-        color: '#6a78ee',
-        font: { size: 18 }
-      },
-      legend: {
-        display: true,
-        position: 'bottom',
-        labels: {
-        color: '#212529',
-        font: { size: 14, family: 'Noto Sans KR'},
-        padding: 20,
-        generateLabels: function(chart) {
-        const data = chart.data;
-        const total = data.datasets[0].data.reduce((a, b) => a + b, 0);
-
-        // 한국어 변환
-        const countryNames = {
-          'china': '중국', 'japan': '일본', 'thailand': '태국', 'usa': '미국',
-          'taiwan': '대만', 'australia': '호주', 'canada': '캐나다', 'vietnam': '베트남',
-          'indonesia': '인도네시아', 'philippines': '필리핀', 'malaysia': '말레이시아',
-          'mongolia': '몽골', 'hong kong': '홍콩', 'singapore': '싱가포르', 'uk': '영국',
-          'france': '프랑스', 'germany': '독일'
-        };
-
-        // ✅ 호주부터 독일까지만 표시 (6~10번째)
-        const start = 5; // 6번째(호주)부터
-        const end = 10;  // 10번째(독일)까지
-
-        return data.labels.slice(start, end).map((label, i) => ({
-          text: `${countryNames[label.toLowerCase()] || label} (${((data.datasets[0].data[i + start] / total) * 100).toFixed(1)}%)`,
-          fillStyle: data.datasets[0].backgroundColor[i + start],
-          strokeStyle: data.datasets[0].backgroundColor[i + start],
-          lineWidth: 2,
-          hidden: false,
-          index: i + start
-            }));
-          }
-        },
-        onClick: (e, legendItem, legend) => {
-        // 아무것도 안 해서 토글 동작 막기
-        e.stopPropagation();
-      },
-    }
-    },
-  },
-  plugins: [{
-    id: 'labelInside',
-    afterDatasetsDraw(chart) {
-      const { ctx } = chart;
-      const meta = chart.getDatasetMeta(0);
-      const dataset = chart.data.datasets[0];
-      const total = dataset.data.reduce((a, b) => a + b, 0);
-      const top5 = meta.data.slice(0, 5);
-
-      // ===== 상위 5개 도넛 내부 표시 =====
-      ctx.save();
-      ctx.textAlign = 'center';
-      ctx.textBaseline = 'middle';
-      top5.forEach((arc, i) => {
-        const { x, y } = arc.tooltipPosition();
-        const label = chart.data.labels[i];
-        const value = dataset.data[i];
-        const percent = ((value / total) * 100).toFixed(1) + '%';
-        ctx.font = '18px "Noto Sans KR"';
-        ctx.fillStyle = '#fff';
-        ctx.fillText(label, x, y - 10);
-        ctx.font = '13px "Noto Sans KR"';
-        ctx.fillStyle = '#fff';
-        ctx.fillText(percent, x, y + 12);
-      });
-      ctx.restore();
-    }
-  }]
-});
-
-  </script>
-<script src="mb.js"></script>
-
+<script src="../static/script.js"></script>
 </body>
 </html>
