--- a/Frontend/page3.html
+++ b/Frontend/page3.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>K-pop 아이돌 대시보드</title>
-  <!-- <script src="{{ url_for('static', filename='debut_data.js') }}"></script> -->
-  <link rel="stylesheet" href="../static/style.css"> <!-- local test -->
+  <script src="{{ url_for('static', filename='debut_data.js') }}"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
-  <!-- <script src="{{ url_for('static', filename='debut_data.js') }}"></script> -->
-   <script src="../static/debut_data.js"></script>
 </head>
 <body>
   
@@ -16,14 +14,19 @@
 <!-- <button id="menuToggle" class="menu-toggle">☰</button> -->
 
 <!-- 사이드 메뉴 -->
-<nav id="sidebar" class="sidebar">
+<aside id="sidebar" class="sidebar">
+  <img id = "kdhlogo" src="../static/kdhlogo.png">
   <ul class="menu">
     <li><a href="/"> 홈</a></li>
-    <li><a href="/prev">⏮ 이전 페이지</a></li>
-    <li><a href="/next">⏭ 다음 페이지</a></li>
+    <li><a href="/page2" >⏮ 이전 페이지</a></li>
+    <li><a href="/page3" class="active">⏭ 다음 페이지</a></li>
   </ul>
-</nav>
+</aside>
 
+
+  <div class="title">
+    <span>안녕하세요</span>
+  </div>
   <!-- 상단: 주요 그래프 -->
   <div class="dashboard">
     <div class="row">
@@ -42,8 +45,7 @@
 
 
 
-<script src="../static/menuboard.js"></script>
-
-<script src="../static/script.js"></script>
+<script src="{{ url_for('static', filename='menuboard.js') }}"></script>
+<script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
