--- a/Frontend/page2.html
+++ b/Frontend/page2.html
@@ -8,44 +8,40 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
 </head>
 <body>
-  
- 
- <!-- 토글 버튼 -->
-<!-- <button id="menuToggle" class="menu-toggle">☰</button> -->
 
-<!-- 사이드 메뉴 -->
 <aside id="sidebar" class="sidebar">
-  <img id = "kdhlogo" src="../static/kdhlogo.png">
+  <img id="kdhlogo" src="../static/kdhlogo.png">
   <ul class="menu">
-    <li><a href="/" > 홈</a></li>
+    <li><a href="/"> 홈</a></li>
     <li><a href="/page2" class="active">⏮ 이전 페이지</a></li>
     <li><a href="/page3">⏭ 다음 페이지</a></li>
   </ul>
 </aside>
 
+<div class="title">
+  <span>안녕하세요</span>
+</div>
 
-  <div class="title">
-    <span>안녕하세요</span>
-  </div>
-  <!-- 상단: 주요 그래프 -->
-  <div class="dashboard">
-    <div class="row">
-      <!-- 왼쪽: 데뷔 수 + 이동평균 -->
-      <div class="chart-box">
-        <canvas id="trendChart"></canvas>
-        <canvas id="foreignRatioChart" style="margin-top:40px;"></canvas>
-      </div>
+<!-- 상단: 주요 그래프 -->
+<div class="dashboard">
+  <div class="row">
 
-      <!-- 오른쪽: 국적 비율 -->
-      <div class="chart-box">
-        <canvas id="nationalityChart"></canvas>
-      </div>
+    <!-- 왼쪽 부분에 회사별 외국인 비율 차트가 들어갈 자리 -->
+    <div class="chart-box">
+      <canvas id="foreignChart"></canvas> <!-- ✅ 교체 완료 -->
+      <canvas id="foreignRatioChart" style="margin-top:40px;"></canvas>
     </div>
+
+    <!-- 오른쪽 국적 비율 도넛 차트 -->
+    <div class="chart-box">
+      <canvas id="nationalityChart"></canvas>
+    </div>
+
   </div>
-
-
+</div>
 
 <script src="{{ url_for('static', filename='menuboard.js') }}"></script>
 <script src="{{ url_for('static', filename='page2script.js') }}"></script>
+
 </body>
 </html>
