제목, 사이드바

--- a/Frontend/page1.html
+++ b/Frontend/page1.html
@@ -6,6 +6,7 @@
   <script src="{{ url_for('static', filename='debut_data.js') }}"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
   
@@ -17,15 +18,15 @@
 <aside id="sidebar" class="sidebar">
   <img id = "kdhlogo" src="../static/kdhlogo.png">
   <ul class="menu">
-    <li><a href="/"  class="active"> 홈</a></li>
-    <li><a href="/page2">⏮ 이전 페이지</a></li>
-    <li><a href="/page3">⏭ 다음 페이지</a></li>
+    <li><a href="/"  class="active"> K-POP 산업 규모 변화 지표</a></li>
+    <li><a href="/page2">K-POP 산업의 글로벌 진화</a></li>
+    <li><a href="/page3">K-POP 수출 지표</a></li>
   </ul>
 </aside>
 
 
   <div class="title">
-    <span>안녕하세요</span>
+    <span class="kdh-logo">K-POP 산업 규모 변화 지표: 연도별 데뷔 수</span>
   </div>
   <!-- 상단: 주요 그래프 -->
   <div class="dashboard">
