--- a/Frontend/page2.html
+++ b/Frontend/page2.html
@@ -5,21 +5,22 @@
   <title>K-pop 아이돌 대시보드</title>
   <script src="{{ url_for('static', filename='debut_data.js') }}"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <aside id="sidebar" class="sidebar">
   <img id="kdhlogo" src="../static/kdhlogo.png">
   <ul class="menu">
-    <li><a href="/"> 홈</a></li>
-    <li><a href="/page2" class="active">⏮ 이전 페이지</a></li>
-    <li><a href="/page3">⏭ 다음 페이지</a></li>
+    <li><a href="/"> K-POP 산업 규모 변화 지표</a></li>
+    <li><a href="/page2" class="active">K-POP 산업의 글로벌 진화</a></li>
+    <li><a href="/page3">K-POP 수출 지표</a></li>
   </ul>
 </aside>
 
 <div class="title">
-  <span>안녕하세요</span>
+  <span class="kdh-logo">K-POP 산업의 글로벌 진화: 외국인 아이돌의 확대</span>
 </div>
 
 <!-- 상단: 주요 그래프 -->
