--- a/Frontend/page3.html
+++ b/Frontend/page3.html
@@ -33,13 +33,7 @@
     <div class="row">
       <!-- 왼쪽: 데뷔 수 + 이동평균 -->
       <div class="chart-box">
-        <canvas id="trendChart"></canvas>
-        <canvas id="foreignRatioChart" style="margin-top:40px;"></canvas>
-      </div>
-
-      <!-- 오른쪽: 국적 비율 -->
-      <div class="chart-box">
-        <canvas id="nationalityChart"></canvas>
+        <canvas id="kpopChart"></canvas>
       </div>
     </div>
   </div>
@@ -47,6 +41,6 @@
 
 
 <script src="{{ url_for('static', filename='menuboard.js') }}"></script>
-<script src="{{ url_for('static', filename='script.js') }}"></script>
+<script src="{{ url_for('static', filename='page3script.js') }}"></script>
 </body>
 </html>
